# ml-book-oreilly-scikit-keras-tf

./: .gitignore  california_houses.ipynb  classification.ipynb  decision_trees.ipynb  iris_clustering.ipynb  main.ipynb  pyproject.toml  random_forest_ensemble.ipynb  svms.ipynb
