[tool.poetry]
name = "ml-book-oreilly-scikit-keras-tf"
version = "0.1.0"
description = ""
authors = ["fibleep <filipn924@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.25.2"
matplotlib = "^3.8.0"
numpy = "^1.25.2"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
graphviz = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
